--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -21,6 +21,13 @@
     <%= form.number_field :age %>
   </div>
 
+  <div class="field">
+    <%= form.label :email %>
+    <%= form.text_field :email %>
+  </div>
+
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
